--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ header {
     width: 100%;
     text-align: center;
     background-color: #fff;
-    z-index: 5;
+    z-index: 15;
 }
 
 header li {
@@ -100,6 +100,7 @@ header a {
 }
 
 nav {
+    transition: border .5s;
     border-top: 10px solid #4abdac;
     border-bottom: 10px solid #4abdac;
     margin-bottom: 0px;
@@ -111,6 +112,10 @@ nav ul {
     min-width: 300px;
     flex-basis: auto;
     flex-grow: 1;
+}
+
+nav a {
+    transition: color ease-out .5s;
 }
 
 
@@ -183,76 +188,145 @@ nav ul {
 }
 
 #portfolio {
-    margin: 20vh auto;
-    width: 90%;
+    margin: 30vh auto;
+    width: 1300px;
     background-color: #fff;
     border: 15px solid #fc4a1a;
     margin-bottom: 50px;
-    height: 120vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: space-around;
+    height: 80vh;
+    text-align: center;
+    overflow: hidden;
 }
 
-#portfolio div {
-    
+#close {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    position: absolute;
+    font-size: 2rem;
+    color: #fff;
+    background-color: #4abdac;
+    border-radius: 50%;
+    border: none;
+    left: 10%;
+    top: 7%;
+    opacity: 0;
+    transition: opacity .2s ease-out;
+    z-index: 10;
+}
+
+.group-content {
+    transition: transform .4s ease-in,
+    bottom .4s ease-in;
+}
+
+#portfolio h2 {
+    display: block;
+    width: 100%;
 }
 
 .project-group {
     position: relative;
     background-color: #fff;
     min-width: 300px;
-    width: 40%;
-    height: 50vh;
+    max-width: 100%;
+    height: 70vh;
     display: block;
     align-items: stretch;
-    border: 1px solid #000;
-    text-align: center;
+    /* border: 1px solid #000; */
+    text-align: left;
+}
+
+.project-group h4 {
+    font-size: 2em;
+    position: absolute;
+    right: 22%;
+    bottom: 46vh;
+    z-index: 10;
 }
 
 .project-group img {
-    position: absolute;
-    width: 50%;
+    width: 100%;
+    transition: transform;
+    transition-duration: .2s;
+}
+
+.port-caption {
+    transition: all;
+    transition-duration: .5s;
 }
 
 .folder {
     position: absolute;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
-    background-color: tan;
-    width: 80%;
-    height: 40vh;
+    background-color: #fff;
+    width: 60%;
+    padding-bottom: 50%;
     z-index: 9;
-    bottom: 2vh;
+    bottom: 5vh;
     left: 0;
     right: 0;
     margin: 0 auto;
+    border-radius: 5px;
 }
 
 .folder-border {
     position: absolute;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
-    background-color: black;
-    width: 81%;
-    height: 41vh;
+    background-color: #4abdac;
+    width: 62%;
+    padding-bottom: 53%;
     z-index: 1;
-    bottom: 1.7vh;
+    bottom: 4vh;
     left: 0;
     right: 0;
     margin: 0 auto;
-}
-
-/* Need to fix not currently displaying; Needs to show on tab of folder */
-.folder h4 {
-    z-index: 10;
+    border-radius: 5px;
 }
 
 .img1 {
-    position: relative;
-    left: 10%;
-    top: 15vh;
-    transform: rotate(-80deg);
-    
+    width: 45%;
+    position: absolute;
+    left: 30%;
+    bottom: 15vh;
+    transform: rotate(-12deg);
+    z-index: 3;
+}
+
+.img2 {
+    width: 45%;
+    position: absolute;
+    left: 27%;
+    bottom: 20vh;
+    transform: rotate(-17deg);
+    z-index: 2;
+}
+
+/* list of details for a chosen portfolio project that appears when project is clicked */
+.port-list {
+    display: block;
+    max-width: 45%;
+    opacity: 0;
+    position: absolute;
+    left: 60%;
+    top: 10vh;
+    transition: opacity .2s ease .2s,
+    transform .2s ease;
+    line-height: 4vh;
+}
+
+.port-img {
+    padding: 10px;
+    background-color: #fff;
+    border: 4px solid #f7b733;
+    text-align: center;
+    transition: all;
+    transition-duration: .5s;
+}
+
+/* Hovered project image pulls up out of folder slightly **USE JS TO COMPLETE ANIMATION */
+.port-img:hover {
+    transform: translate(0px, -3vh) rotate(-15deg);
 }
 
 @keyframes smooth {
@@ -271,6 +345,12 @@ nav ul {
     margin: 0 auto;
     height: 40vh;
 }
+
+/* transition properties for transition made to elements in Script.js */
+/* #landing-page1 {
+    transition: all;
+    transition-duration: .5s;
+} */
 
 /* Color Classes */
 .aqua {
