--- a/css/styles.css
+++ b/css/styles.css
@@ -188,17 +188,52 @@ nav a {
 }
 
 #portfolio {
+    position: relative;
     margin: 30vh auto;
-    width: 1300px;
+    width: 75%;
     background-color: #fff;
     border: 15px solid #fc4a1a;
     margin-bottom: 50px;
     height: 80vh;
+    padding-top: 20px;
     text-align: center;
     overflow: hidden;
 }
 
+.arrow-button {
+    cursor: pointer;
+    position: absolute;
+    height: 75px;
+    width: 75px;
+    font-size: 40px;
+    color: #fff;
+    background-color: #4abdac;
+    border-radius: 50%;
+    z-index: 20;
+    border: 3px solid #f7b733;
+    transition: opacity .2s ease-in, 
+    visibility .25s;
+}
+
+.arrow-button:focus {
+    outline: none;
+}
+
+#next{
+    top: 40vh;
+    right: 5%;
+}
+
+#previous {
+    visibility: hidden;
+    top: 40vh;
+    left: 5%;
+    opacity: 0;
+}
+
 #close {
+    visibility: hidden;
+    cursor: pointer;
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -208,16 +243,20 @@ nav a {
     background-color: #4abdac;
     border-radius: 50%;
     border: none;
-    left: 10%;
-    top: 7%;
+    left: 4%;
+    top: 2vh;
     opacity: 0;
     transition: opacity .2s ease-out;
     z-index: 10;
 }
 
+#close:focus {
+    outline: none;
+}
+
 .group-content {
-    transition: transform .4s ease-in,
-    bottom .4s ease-in;
+    transition: transform .4s ease-in-out,
+    bottom .4s ease-in-out;
 }
 
 #portfolio h2 {
@@ -225,6 +264,7 @@ nav a {
     width: 100%;
 }
 
+/* container of each "folder" in portfolio section */
 .project-group {
     position: relative;
     background-color: #fff;
@@ -232,17 +272,72 @@ nav a {
     max-width: 100%;
     height: 70vh;
     display: block;
-    align-items: stretch;
-    /* border: 1px solid #000; */
     text-align: left;
+    transition: transform .4s ease-in-out;
 }
 
-.project-group h4 {
-    font-size: 2em;
+.final-group {
+    margin-top: 40px;
+    width: 100%;
+    text-align: center;
+}
+
+.icon-container {
+    padding: 3vh 20px;
+    width: 60%;
+    background-color: #4abdac;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20vh auto 0 auto;
+    border-radius: 30px;
+}
+
+.icon {
+    align-self: start;
+    width: 80px;
+    background-color: #fff;
+    padding: 25px;
+    margin: 3vh 5%;
+    border: 6px solid #32897c;
+    border-radius: 50%;
+}
+
+/* class for folders that will start on right side off screen until called in by JS */
+/* using ids instead currently, need to be able to use the below class instead */
+.start-on-right {
+    position: relative;
+}
+
+/* due to display: relative being needed for folder and contents, each folder must be relatively moved up */
+#websites {
+    transform: translate(2000px);
+    top: -70vh;
+}
+
+#other {
+    transform: translate(2000px);
+    top: -140vh;
+}
+
+#writing {
+    transform: translate(2000px);
+    top: -210vh;
+}
+
+#external-links {
+    transform: translate(2000px);
+    top: -280vh;
+}
+
+
+
+.folder-title {
+    font-size: 2rem;
+    color: #fff;
     position: absolute;
-    right: 22%;
-    bottom: 46vh;
-    z-index: 10;
+    bottom: 380px;
+    right: 20px;
 }
 
 .project-group img {
@@ -251,17 +346,12 @@ nav a {
     transition-duration: .2s;
 }
 
-.port-caption {
-    transition: all;
-    transition-duration: .5s;
-}
-
 .folder {
-    position: absolute;
+    position: relative;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
-    background-color: #fff;
-    width: 60%;
-    padding-bottom: 50%;
+    background-color: #4abdac;
+    width: 780px;
+    height: 650px;
     z-index: 9;
     bottom: 5vh;
     left: 0;
@@ -271,13 +361,13 @@ nav a {
 }
 
 .folder-border {
-    position: absolute;
+    position: relative;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
-    background-color: #4abdac;
-    width: 62%;
-    padding-bottom: 53%;
+    background-color: #32897c;
+    width: 806px;
+    height: 689px;
     z-index: 1;
-    bottom: 4vh;
+    bottom: 725px;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -285,7 +375,7 @@ nav a {
 }
 
 .img1 {
-    width: 45%;
+    width: 560px;
     position: absolute;
     left: 30%;
     bottom: 15vh;
@@ -294,10 +384,10 @@ nav a {
 }
 
 .img2 {
-    width: 45%;
+    width: 560px;
     position: absolute;
     left: 27%;
-    bottom: 20vh;
+    bottom: 18vh;
     transform: rotate(-17deg);
     z-index: 2;
 }
@@ -324,10 +414,10 @@ nav a {
     transition-duration: .5s;
 }
 
-/* Hovered project image pulls up out of folder slightly **USE JS TO COMPLETE ANIMATION */
-.port-img:hover {
+/* Hovered project image pulls up out of folder slightly **BEING REPLACED BY JS */
+/* .port-img:hover {
     transform: translate(0px, -3vh) rotate(-15deg);
-}
+} */
 
 @keyframes smooth {
     0% { opacity: 0;}
@@ -383,7 +473,13 @@ nav a {
 
 @media only screen and (max-width: 1115px) {
     .content {
-        max-width: 90%;
+        width: 100%;
+    }
+
+    #portfolio {
+        width: 100%;
+        border-left: none;
+        border-right: none;
     }
 }
 
