--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ header {
 }
 
 header li {
-    font-size: 1.5rem;
     margin: 0 10%;
     list-style-type: none;
     display: inline-block;
@@ -94,9 +93,10 @@ header li {
 header a {
     text-decoration: none;
     color: #000;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     transition: color;
     transition-duration: 0.2s;
+    cursor: pointer;
 }
 
 nav {
@@ -121,14 +121,13 @@ nav a {
 
 /* button animates in from 0 opacity and translates in from top-left. */
 .button {
+    cursor: pointer;
     /* position element at starting postion before animating down/right */
     position: relative;
-    right: 20px;
-    bottom: 30px;
     box-sizing: border-box;
     height: 68px;
     width: 130px; 
-    margin: 4vh auto 4vh auto;
+    margin: 2vh auto 6vh auto;
     border: #f7b733 solid 4px;
     border-radius: 10px;
     background-color: #fc4a1a; 
@@ -137,12 +136,7 @@ nav a {
     animation: smooth 1.5s forwards;
     animation-delay: 1s;
     box-shadow: 5px 8px #000;
-    transition: transform, box-shadow;
-    transition-duration: .7s;
-    transition-delay: 1s;
-    transition-timing-function: ease-out;;
     display: block;
-    transform: translate(20px, 30px);
 }
 
 .button p {
@@ -156,7 +150,6 @@ nav a {
 
 .current_page {
     color: #fc4a1a;
-    font-weight: bold;
 }
 
 .name {
@@ -187,14 +180,74 @@ nav a {
     font-size: 1.5rem;
 }
 
+#about {
+    position: relative;
+    margin: 25vh auto;
+    width: 75%;
+    min-height: 80vh;
+    background-color: #fff;
+    border: 15px solid #f7b733;
+    text-align: center;
+    overflow: hidden;
+}
+
+.about-heading {
+    margin: 5vh auto;
+    font-size: 2rem;
+}
+
+.about-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-info {
+    width: 500px;
+    border-radius: 30px;
+    border: 10px solid #32897c;
+    background-color: #4abdac;
+    height: 40vh;
+    padding: 5vh 2.5%;
+    font-size: 1.2rem;
+    color: #fff;
+    text-align: left;
+    margin-bottom: 5vh;
+}
+
+.about-info li {
+    margin: 0 10px 2vh 10px;
+}
+
+.about-pic-container p {
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: #32897c;
+}
+
+.about-pic-container {
+    flex-basis: 500px;
+    margin-bottom: 5vh;
+}
+
+.about-pic {
+    width: 100%;
+    flex-grow: 0;
+    float: left;
+    border: 10px solid #4abdac;
+    border-radius: 30px;
+}
+
 #portfolio {
     position: relative;
-    margin: 30vh auto;
+    margin: 25vh auto;
     width: 75%;
+    height: 80vh;
     background-color: #fff;
     border: 15px solid #fc4a1a;
     margin-bottom: 50px;
-    height: 80vh;
     padding-top: 20px;
     text-align: center;
     overflow: hidden;
@@ -244,7 +297,7 @@ nav a {
     border-radius: 50%;
     border: none;
     left: 4%;
-    top: 2vh;
+    top: 8vh;
     opacity: 0;
     transition: opacity .2s ease-out;
     z-index: 10;
@@ -260,6 +313,7 @@ nav a {
 }
 
 #portfolio h2 {
+    font-size: 2rem;
     display: block;
     width: 100%;
 }
@@ -375,7 +429,6 @@ nav a {
 }
 
 .img1 {
-    width: 560px;
     position: absolute;
     left: 30%;
     bottom: 15vh;
@@ -384,7 +437,6 @@ nav a {
 }
 
 .img2 {
-    width: 560px;
     position: absolute;
     left: 27%;
     bottom: 18vh;
@@ -406,6 +458,7 @@ nav a {
 }
 
 .port-img {
+    width: 560px;
     padding: 10px;
     background-color: #fff;
     border: 4px solid #f7b733;
@@ -421,7 +474,6 @@ nav a {
 
 @-webkit-keyframes smooth {
     0% { opacity: 0;}
-    70% {opacity: 3;}
     100% { opacity: 1;}
 }
 
@@ -460,21 +512,24 @@ nav a {
     }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 825px) {
     header a {
         font-size: 1.25rem;
     }
+    #portfolio {
+        width: 100%;
+        border-left: none;
+        border-right: none;
+    }
+    
+    #portfolio h2 {
+        font-size: 1.25rem;
+    } 
 }
 
 @media only screen and (max-width: 1115px) {
     .content {
         width: 100%;
-    }
-
-    #portfolio {
-        width: 100%;
-        border-left: none;
-        border-right: none;
     }
 }
 
@@ -482,4 +537,27 @@ nav a {
     header li {
         margin: 0;
     }
+}
+
+@media only screen and (max-width: 1300px) {
+    .folder {
+        width: 600px;
+        height: 500px;
+        bottom: -15vh;
+    }
+
+    .folder-border {
+        width: 630px;
+        height: 525px;
+        bottom: 40vh;
+    }
+
+    .port-img {
+        width: 350px;
+    }
+
+    .folder-title {
+        transform: translate(25px, 10vh) scale(0.75);
+    }
+
 }
