--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ nav a {
     position: relative;
     margin: 25vh auto;
     width: 75%;
-    height: 80vh;
+    height: 50rem;
     background-color: #fff;
     border: 15px solid #fc4a1a;
     margin-bottom: 50px;
@@ -273,13 +273,13 @@ nav a {
 }
 
 #next{
-    top: 40vh;
+    top: 25rem;
     right: 5%;
 }
 
 #previous {
     visibility: hidden;
-    top: 40vh;
+    top: 25rem;
     left: 5%;
     opacity: 0;
 }
@@ -297,7 +297,7 @@ nav a {
     border-radius: 50%;
     border: none;
     left: 4%;
-    top: 8vh;
+    top: 4rem;
     opacity: 0;
     transition: opacity .2s ease-out;
     z-index: 10;
@@ -324,7 +324,7 @@ nav a {
     background-color: #fff;
     min-width: 300px;
     max-width: 100%;
-    height: 70vh;
+    height: 40rem;
     display: block;
     text-align: left;
     transition: transform .4s ease-in-out;
@@ -343,7 +343,7 @@ nav a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 20vh auto 0 auto;
+    margin: 10rem auto 0 auto;
     border-radius: 30px;
 }
 
@@ -352,7 +352,7 @@ nav a {
     width: 80px;
     background-color: #fff;
     padding: 25px;
-    margin: 3vh 5%;
+    margin: 2rem 5%;
     border: 6px solid #32897c;
     border-radius: 50%;
 }
@@ -366,22 +366,22 @@ nav a {
 /* due to display: relative being needed for folder and contents, each folder must be relatively moved up */
 #websites {
     transform: translate(2000px);
-    top: -70vh;
+    top: -40rem;
 }
 
 #other {
     transform: translate(2000px);
-    top: -140vh;
+    top: -80rem;
 }
 
 #writing {
     transform: translate(2000px);
-    top: -210vh;
+    top: -120rem;
 }
 
 #external-links {
     transform: translate(2000px);
-    top: -280vh;
+    top: -160rem;
 }
 
 
@@ -401,13 +401,13 @@ nav a {
 }
 
 .folder {
-    position: relative;
+    position: absolute;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
     background-color: #4abdac;
     width: 780px;
     height: 650px;
     z-index: 9;
-    bottom: 5vh;
+    bottom: 3rem;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -415,13 +415,13 @@ nav a {
 }
 
 .folder-border {
-    position: relative;
+    position: absolute;
     clip-path: polygon(65% 34%, 100% 34%, 100% 47%, 100% 100%, 0 100%, 0 43%, 65% 43%);
     background-color: #32897c;
     width: 806px;
     height: 689px;
     z-index: 1;
-    bottom: 725px;
+    bottom: 2.2rem;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -431,7 +431,7 @@ nav a {
 .img1 {
     position: absolute;
     left: 30%;
-    bottom: 15vh;
+    bottom: 9rem;
     transform: rotate(-12deg);
     z-index: 3;
 }
@@ -439,7 +439,7 @@ nav a {
 .img2 {
     position: absolute;
     left: 27%;
-    bottom: 18vh;
+    bottom: 11rem;
     transform: rotate(-17deg);
     z-index: 2;
 }
@@ -451,10 +451,10 @@ nav a {
     opacity: 0;
     position: absolute;
     left: 60%;
-    top: 10vh;
+    top: 3rem;
     transition: opacity .2s ease .2s,
     transform .2s ease;
-    line-height: 4vh;
+    line-height: 2.5rem;
 }
 
 .port-img {
@@ -543,13 +543,13 @@ nav a {
     .folder {
         width: 600px;
         height: 500px;
-        bottom: -15vh;
+        bottom: 6rem;
     }
 
     .folder-border {
         width: 630px;
         height: 525px;
-        bottom: 40vh;
+        bottom: 5.5rem;
     }
 
     .port-img {
@@ -557,7 +557,7 @@ nav a {
     }
 
     .folder-title {
-        transform: translate(25px, 10vh) scale(0.75);
+        transform: translate(25px, 6rem) scale(0.75);
     }
 
 }
