--- a/css/styles.css
+++ b/css/styles.css
@@ -240,11 +240,15 @@ nav a {
     border-radius: 30px;
 }
 
+#see-work {
+    width: 200px;
+}
+
 #portfolio {
     position: relative;
     margin: 25vh auto;
     width: 75%;
-    height: 50rem;
+    height: 45rem;
     background-color: #fff;
     border: 15px solid #fc4a1a;
     margin-bottom: 50px;
@@ -447,10 +451,10 @@ nav a {
 /* list of details for a chosen portfolio project that appears when project is clicked */
 .port-list {
     display: block;
-    max-width: 45%;
+    width: 30%;
     opacity: 0;
     position: absolute;
-    left: 60%;
+    right: 4rem;
     top: 3rem;
     transition: opacity .2s ease .2s,
     transform .2s ease;
@@ -483,12 +487,6 @@ nav a {
     height: 40vh;
 }
 
-/* transition properties for transition made to elements in Script.js */
-/* #landing-page1 {
-    transition: all;
-    transition-duration: .5s;
-} */
-
 /* Color Classes */
 .aqua {
     color: #4abdac;
@@ -509,6 +507,21 @@ nav a {
         width: 100%;
         border: none;
         height: auto;
+    }
+
+    #about {
+     width: 100%;
+     height: auto;
+     border-left: none;
+     border-right: none;
+    }
+
+    .about-content div {
+        margin: 0 20px;
+    }
+
+    .about-info {
+        overflow: scroll;
     }
 }
 
@@ -531,6 +544,7 @@ nav a {
     .content {
         width: 100%;
     }
+
 }
 
 @media only screen and (max-width: 625px) {
@@ -539,7 +553,7 @@ nav a {
     }
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1450px) {
     .folder {
         width: 600px;
         height: 500px;
@@ -561,3 +575,21 @@ nav a {
     }
 
 }
+
+/* @media only screen and (max-width: 1450px) {
+    .port-img {
+        width: 400px;
+    }
+
+    .folder {
+        height: 500px;
+    }
+
+    .folder-border {
+        height: 530px;
+    }
+
+    .folder-title {
+        bottom: 280px;
+    }
+} */
