--- a/css/styles.css
+++ b/css/styles.css
@@ -445,12 +445,14 @@ nav a {
 
 .port-img {
     width: 560px;
+    height: 300px;
     padding: 10px;
     background-color: #fff;
     border: 4px solid #f7b733;
     text-align: center;
     transition: all;
     transition-duration: .5s;
+    overflow: hidden;
 }
 
 @keyframes smooth {
