--- a/css/styles.css
+++ b/css/styles.css
@@ -194,13 +194,17 @@ nav a {
     height: 40vh;
     padding: 5vh 2.5%;
     font-size: 1.2rem;
+    line-height: 2rem;
     color: #fff;
     text-align: left;
     margin-bottom: 5vh;
+    display: flex;
+    align-items: center;
+    font-family: "Open Sans", sans-serif;
 }
 
-.about-info li {
-    margin: 0 10px 2vh 10px;
+.about-info span {
+    margin-bottom: 40px;
 }
 
 .about-pic-container p {
@@ -441,6 +445,7 @@ nav a {
     transition: opacity .2s ease .2s,
     transform .2s ease;
     line-height: 2.5rem;
+    list-style-position: inside;
 }
 
 .port-img {
@@ -453,6 +458,10 @@ nav a {
     transition: all;
     transition-duration: .5s;
     overflow: hidden;
+}
+
+.item-header {
+    font-style: italic;
 }
 
 @keyframes smooth {
@@ -504,9 +513,7 @@ nav a {
         margin: 0 20px;
     }
 
-    .about-info {
-        overflow: scroll;
-    }
+
 }
 
 @media only screen and (max-width: 825px) {
@@ -524,9 +531,19 @@ nav a {
     } 
 }
 
-@media only screen and (max-width: 1115px) {
+@media only screen and (max-width: 1480px) {
     .content {
         width: 100%;
+    }
+
+    #portfolio {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .about-info {
+        height: auto;
+        overflow: hidden;
     }
 
 }
