--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ nav a {
     overflow: hidden;
 }
 
+#school {
+    height: auto !important;
+}
+
 .arrow-button {
     cursor: pointer;
     position: absolute;
